start to integrate commandLineOptions in Main.java to start automativ a second JVM from client side